--- a/evently/profile/profileReady/mustache.html
+++ b/evently/profile/profileReady/mustache.html
@@ -14,7 +14,8 @@
     <input type="file" name="_attachments">
   </label></p>
   <p><label>Optional message: <input type="text" name="message" size=60 value=""></label></p>
- <p><input type="submit" value="Upload Image"></p>
+ <p><input type="hidden" name="_rev" value="">
+   <input type="submit" value="Upload Image"></p>
 </form>
 
 <div style="clear:left;"></div>
