--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -9,7 +9,9 @@
 
     <h1>Generated CouchApp</h1>
 
-    <div id="profile"></div>
+    <div id="profile">
+
+    </div>
     <div id="items"></div>
 
     <div id="sidebar">
@@ -18,12 +20,19 @@
     </div>
   </body>
   <script src="vendor/couchapp/loader.js"></script>
+  <script src="script/jquery.couchLogin.js"></script>
   <script type="text/javascript" charset="utf-8">
     $.couch.app(function(app) {
-      $("#account").evently("account", app);
-      $("#profile").evently("profile", app);
-      $.evently.connect("#account","#profile", ["loggedIn","loggedOut"]);
-      $("#items").evently("items", app);
+        $("#profile").evently("profile", app);
+        $("#items").evently("items", app);
+        $("#account").couchLogin({
+            loggedIn : function(r) {
+                $("#profile").trigger("loggedIn", [r]);
+            },
+            loggedOut : function() {
+                $("#profile").trigger("loggedOut");
+            }
+        });
     });
   </script>
 </html>
