--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -20,11 +20,16 @@
           or a grocery list, or a chat room.</p>
     </div>
   </body>
-  <script src="vendor/couchapp/loader.js"></script>
+  <script src="/_utils/script/sha1.js"></script>
+  <script src="/_utils/script/json2.js"></script>
+  <script src="/_utils/script/jquery.js"></script>
+  <script src="/_utils/script/jquery.couch.js"></script>
+  <script src="script/requires.js"></script>
+  <script src="script/requires.js"></script>
   <script src="script/jquery.couchLogin.js"></script>
   <script src="script/jquery.couchProfile.js"></script>
   <script src="script/jquery.couchForm.js"></script>
-  <script src="vendor/couchapp/jquery.mustache.js"></script>
+  <script src="script/jquery.mustache.js"></script>
 
   <script id="new-message" type="text/x-mustache" charset="utf-8">
       <div class="avatar">
