--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -23,11 +23,11 @@
   <script src="/_utils/script/json2.js"></script>
   <script src="/_utils/script/jquery.js"></script>
   <script src="/_utils/script/jquery.couch.js"></script>
-  <script src="script/requires.js"></script>
-  <script src="script/jquery.couchLogin.js"></script>
-  <script src="script/jquery.couchProfile.js"></script>
-  <script src="script/jquery.couchForm.js"></script>
-  <script src="script/jquery.mustache.js"></script>
+  <script src="vendor/couchapp/jquery.couchLogin.js"></script>
+  <script src="vendor/couchapp/jquery.couchProfile.js"></script>
+  <script src="vendor/couchapp/md5.js"></script>
+  <script src="vendor/couchapp/jquery.couchForm.js"></script>
+  <script src="vendor/couchapp/jquery.mustache.js"></script>
 
   <script id="new-message" type="text/x-mustache" charset="utf-8">
       <div class="avatar">
