--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -29,6 +29,7 @@
   <script src="vendor/couchapp/jquery.couchForm.js"></script>
   <script src="vendor/couchapp/jquery.mustache.js"></script>
 
+<!-- templates used by app.js -->
   <script id="new-message" type="text/x-mustache" charset="utf-8">
       <div class="avatar">
         {{#gravatar_url}}<img src="{{gravatar_url}}"/>{{/gravatar_url}}
